--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,308 +14,300 @@
  *= require_self
  */
 
- @font-face {
-   font-family: 'FFF-Forward';
-   src: asset_url('FFF-Forward.TTF') format('truetype');
-   font-weight: normal;
-   font-style: normal;
- }
+@font-face {
+    font-family: 'FFF-Forward';
+    src: asset_url('FFF-Forward.TTF') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
- // Raleway and Cabin
+// Raleway and Cabin
+body {
+    font-family: sans-serif;
+}
 
- body {
+*:focus {
+    outline: none !important;
+}
 
-     font-family: sans-serif;
- }
+.top-div,
+.main-div {
+    min-width: 842px;
+}
 
- *:focus {
-     outline: none !important;
- }
+.top {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
 
- .top-div, .main-div {
-     min-width: 842px;
- }
+.logo {
+    background: #000;
+    margin: 0;
+    height: 60px;
+    min-width: 140px;
+}
 
- .top {
-     width: 100%;
-     margin: 0;
-     padding: 0;
- }
+.logo h1 {
+    color: #FFF;
+    font-size: 2.5em;
+    vertical-align: middle;
+    text-align: left;
+    padding-left: 20px;
+    line-height: 1.8;
+    margin: 0;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: 600;
+}
 
- .logo {
-     background: #000;
-     margin: 0;
-     height: 60px;
-     min-width: 140px;
- }
+.top-bar {
+    background-color: lightgrey;
+    height: 60px;
+    color: #000;
+    font-size: 3em;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+    line-height: 1;
+    margin: 0;
+    padding-top: 10px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    padding-right: 40px;
+}
 
- .logo h1 {
-     color: #FFF;
-     font-size: 2.5em;
-     vertical-align: middle;
-     text-align: left;
-     padding-left: 20px;
-     line-height: 1.8;
-     margin: 0;
-     font-family: 'Raleway', Arial, sans-serif;
-     font-weight: 600;
- }
+.sidebar {
+    padding-right: 0;
+    background-color: lightgrey;
+    height: 880px;
+    min-width: 140px;
+}
 
+.barbutton {
+    width: 100%;
+    padding: 18px 15px;
+    text-align: left;
+}
 
- .top-bar {
-     background-color: lightgrey;
-     height: 60px;
-     color: #000;
-     font-size: 3em;
-     display: table-cell;
-     vertical-align: middle;
-     text-align: center;
-     line-height: 1;
-     margin: 0;
-     padding-top: 10px;
-     font-family: 'Raleway', sans-serif;
-     font-weight: 400;
-     padding-right: 40px;
+ul.nav {
+    font-family: 'Cabin', sans-serif;
+    font-size: 1.3em;
+    font-weight: 400;
+    text-transform: uppercase;
+}
 
+.nav>li>a {
+    position: relative;
+    display: block;
+    padding: 0;
+}
 
- }
+li a {
+    color: #000;
+}
 
- .sidebar {
-     padding-right: 0;
-     background-color: lightgrey;
-     height: 880px;
-     min-width: 140px;
+li.active a {
+    border-radius: 0px;
+}
 
- }
+.nav-pills>li.active>a,
+.nav-pills>li.active>a:focus {
+    color: #fff;
+    background: grey;
+}
 
- .barbutton {
-     width: 100%;
-     padding: 18px 15px;
-     text-align: left;
- }
+.nav-pills>li.active>a:hover {
+    color: #000;
+    background: #fff;
+}
 
- ul.nav {
-     font-family: 'Cabin', sans-serif;
-     font-size: 1.3em;
-     font-weight: 400;
-     text-transform: uppercase;
+.tab-content {
+    margin-left: 20px;
+    margin-right: 30px;
+    padding: 0;
+}
 
- }
+#kpistab .tab-content {
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 0;
+}
 
- .nav>li>a {
-     position: relative;
-     display: block;
-     padding: 0;
- }
+h2 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 3.5em;
+    font-weight: bold;
+    text-align: center;
+    padding: 22px 10px;
+    text-transform: uppercase;
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 4px;
+}
 
- li a {
-     color: #000;
- }
+.col-1 {
+    margin: 0;
+    padding: 0;
+}
 
- li.active a {
+.left-1 {
+    background: transparent;
+    margin: 0;
+    padding: 0;
+    border-radius: 4px;
+    font-family: 'Cabin', sans-serif;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
 
-     border-radius: 0px;
- }
+.box-1 {
+    height: 270px;
+    background: transparent;
+    border-radius: 10px 0 0 10px;
+    padding: 0;
+    margin: 0;
+    margin-top: 6px;
+    border: solid 2px black;
+    border-right: 0px;
+}
 
- .nav-pills>li.active>a, .nav-pills>li.active>a:focus {
-     color: #fff;
-     background: grey;
- }
+img.guyimage {
+    height: 260px;
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 6px;
+}
 
- .nav-pills>li.active>a:hover {
-     color: #000;
-     background: #fff;
- }
+.guytext {
+    padding: 16px;
+    font-family: 'Raleway', sans-serif;
+}
 
- .tab-content {
-     margin-left: 20px;
-     margin-right: 30px;
-     padding: 0;
+.guytext-2 {
+    padding: 16px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.3em;
+}
 
- }
+.bosstext {
+    padding: 16px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.8em;
+    text-transform: none;
+    font-weight: 300;
+}
 
- #kpistab .tab-content {
-     margin-left: 0px;
-     margin-right: 0px;
-     padding: 0;
+.box-2 {
+    height: 270px;
+    background: #FeFeFe;
+    border-radius: 0 20px 20px 0;
+    border: solid 2px black;
+    padding: 0;
+    margin: 0;
+    margin-top: 6px;
+}
 
- }
+.box-3 {
+    height: 270px;
+    background: #FeFeFe;
+    border-radius: 0 20px 20px 0;
+    border: solid 2px black;
+    padding: 16px;
+    margin: 0;
+    margin-top: 6px;
+    font-family: 'Raleway', sans-serif;
+}
 
+.box-4 {
+    height: 168px;
+    background: #FeFeFe;
+    border-radius: 0 20px 20px 0;
+    border: solid 2px black;
+    padding: 16px;
+    margin: 0;
+    margin-top: 6px;
+    font-family: 'Raleway', sans-serif;
+}
 
+.left-1 h3.kpi {
+    margin: 0;
+    padding: 36px 20px;
+    text-transform: uppercase;
+    font-family: 'Cabin', sans-serif;
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 4px;
+    font-size: 2em;
+    line-height: 1.5em;
+}
 
- h2 {
-     font-family: 'Raleway', sans-serif;
-     font-size: 3.5em;
-     font-weight: bold;
-     text-align: center;
-     padding: 22px 10px;
-     text-transform: uppercase;
-     text-align: center;
-     border: 2px solid black;
-     border-radius: 4px;
- }
+.left-1 h3.kpi .tag {
+    font-size: 1.4em;
+    font-weight: 600;
+    text-transform: capitalize;
+}
 
- .col-1 {
-     margin: 0;
-     padding: 0;
- }
+.left-1 h3,
+.panel {
+    margin: 0;
+    padding: 16px 10px;
+    text-transform: uppercase;
+    font-family: 'Cabin', sans-serif;
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 4px;
+}
 
- .left-1 {
-     background: transparent;
-     margin: 0;
-     padding:0;
-     border-radius: 4px;
-     font-family: 'Cabin', sans-serif;
-     font-weight: 400;
-     margin-bottom: 20px;
- }
+.left-1 h4 {
+    font-size: 1.6em;
+}
 
- .box-1 {
-     height: 270px;
-     background: transparent;
-     border-radius: 10px 0 0 10px;
-     padding:0;
-     margin: 0;
-     margin-top: 6px;
-     border: solid 2px black;
-     border-right: 0px;
- }
+.bold {
+    font-size: 1.5em;
+    font-weight: bold;
+}
 
- img.guyimage {
-     height: 260px;
-     background: transparent;
-     padding:0;
-     margin: 0;
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
-     margin-top: 6px;
- }
- .guytext {
-     padding: 16px;
-     font-family: 'Raleway', sans-serif;
- }
- .guytext-2 {
-     padding: 16px;
-     font-family: 'Raleway', sans-serif;
-     font-size: 1.3em;
- }
+.btn-toolbar>.btn,
+.btn-toolbar>.btn-group,
+.btn-toolbar>.input-group {
+    margin-left: 0px;
+    height: 50px;
+    font-size: 0.9em;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
 
- .bosstext {
-     padding: 16px;
-     font-family: 'Raleway', sans-serif;
-     font-size: 1.8em;
-     text-transform: none;
-     font-weight: 300;
- }
- .box-2 {
-     height: 270px;
-     background: #FeFeFe;
-     border-radius: 0 20px 20px 0;
-     border: solid 2px black;
-     padding:0;
-     margin: 0;
-     margin-top: 6px;
- }
- .box-3 {
-     height: 270px;
-     background: #FeFeFe;
-     border-radius: 0 20px 20px 0;
-     border: solid 2px black;
-     padding: 16px;
-     margin: 0;
-     margin-top: 6px;
-     font-family: 'Raleway', sans-serif;
- }
- .box-4 {
-     height: 168px;
-     background: #FeFeFe;
-     border-radius: 0 20px 20px 0;
-     border: solid 2px black;
-     padding: 16px;
-     margin: 0;
-     margin-top: 6px;
-     font-family: 'Raleway', sans-serif;
- }
+.btn-toolbar>.kpibut-2 {
+    width: 50%;
+    height: 70px;
+}
 
- .left-1 h3.kpi {
-     margin: 0;
-     padding: 36px 20px;
-     text-transform: uppercase;
-     font-family: 'Cabin', sans-serif;
-     text-align: center;
-     border: 2px solid black;
-     border-radius: 4px;
-     font-size: 2em;
-     line-height: 1.5em;
+.kpibut-2-3 {
+    width: 50%;
+}
 
+.btn-toolbar>.kpibut-3 {
+    width: 33.3%;
+    height: 100px;
+}
 
- }
+#kpistab ul {
+    margin-bottom: 12px;
+    margin-left: -5px;
+}
 
- .left-1 h3.kpi .tag {
-     font-size: 1.4em;
-     font-weight: 600;
-     text-transform: capitalize;
-
-
- }
-
- .left-1 h3, .panel {
-     margin: 0;
-     padding: 16px 10px;
-     text-transform: uppercase;
-     font-family: 'Cabin', sans-serif;
-     text-align: center;
-     border: 2px solid black;
-     border-radius: 4px;
-
-
- }
-
- .left-1 h4 {
-     font-size: 1.6em;
- }
-
- .bold {
-     font-size: 1.5em;
-     font-weight: bold;
- }
-
-
-
- .btn-toolbar>.btn, .btn-toolbar>.btn-group, .btn-toolbar>.input-group {
-     margin-left: 0px;
-     height: 50px;
-     font-size: 0.9em;
-     text-transform: uppercase;
-     font-weight: 600;
-     margin-bottom: 5px;
- }
-
- .btn-toolbar>.kpibut-2 {
-     width: 50%;
-     height: 70px;
- }
- .kpibut-2-3 {
-     width: 50%;
- }
- .btn-toolbar>.kpibut-3 {
-     width: 33.3%;
-     height: 100px;
- }
-
- #kpistab ul {
-     margin-bottom: 12px;
-     margin-left: -5px;
- }
-
- #kpistab .nav-tabs>li  {
-     padding: 0px;
-     font-family: 'Raleway', Arial, sans-serif;
-     font-weight: 600;
-     font-size: 16px;
-     width: 50%;
- }
+#kpistab .nav-tabs>li {
+    padding: 0px;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    width: 50%;
+}
 
 #kpistab .nav-tabs > li > a {
     padding: 5px;
@@ -341,34 +333,36 @@
     border: 2px solid;
 }
 
- #kpistab .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:current {
-     color: #555;
+#kpistab .nav-tabs>li.active>a,
+.nav-tabs>li.active>a:focus,
+.nav-tabs>li.active>a:hover,
+.nav-tabs>li.active>a:current {
+    color: #555;
+}
 
- }
+.nav-tabs {
+    border-bottom: none;
+}
 
- .nav-tabs {
-     border-bottom: none;
- }
+.nav-stacked>li {
+    padding-left: 0px;
+}
 
- .nav-stacked>li {
-     padding-left: 0px;
- }
+.indicator {
+    font-weight: bold;
+    text-transform: uppercase;
+}
 
- .indicator {
-     font-weight: bold;
-     text-transform: uppercase;
- }
+h2.weektitle {
+    border: none;
+    text-transform: none;
+}
 
- h2.weektitle {
-     border: none;
-     text-transform: none;
- }
-
- .btn-toolbar>.nextbutton {
-     width: 100%;
-     font-size: 2em;
-     height: 3em;
- }
+.btn-toolbar>.nextbutton {
+    width: 100%;
+    font-size: 2em;
+    height: 3em;
+}
 
 .kpi-name {
     padding: 0;
@@ -386,19 +380,20 @@
 h3.kpiname {
     height: 200px;
     margin: 0;
-     padding: 36px 20px;
-     text-transform: uppercase;
-     font-family: 'Cabin', sans-serif;
-     text-align: center;
-     border: 2px solid black;
-     border-radius: 4px;
-     font-size: 2em;
-     line-height: 1.5em;
-
+    padding: 36px 20px;
+    text-transform: uppercase;
+    font-family: 'Cabin', sans-serif;
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 4px;
+    font-size: 2em;
+    line-height: 1.5em;
 }
+
 h3.kpivalue {
     height: 120px;
 }
+
 h3.kpievo {
     height: 80px;
 }
@@ -406,70 +401,74 @@ h3.kpievo {
 .kpi-name {
     height: 200px;
     margin: 0;
-     font-family: 'Cabin', sans-serif;
-     font-size: 2em;
-     line-height: 1.5em;
+    font-family: 'Cabin', sans-serif;
+    font-size: 2em;
+    line-height: 1.5em;
 }
 
 .kpi-def {
-        height: 200px;
+    height: 200px;
     margin: 0;
-     padding: 36px 20px;
-     font-family: 'Cabin', sans-serif;
-     text-align: left;
-     border: 2px solid black;
-     border-radius: 4px;
-     font-size: 1em;
-     line-height: 1.5em;
+    padding: 36px 20px;
+    font-family: 'Cabin', sans-serif;
+    text-align: left;
+    border: 2px solid black;
+    border-radius: 4px;
+    font-size: 1em;
+    line-height: 1.5em;
 }
 
 .bigkpi {
-  height: 200px;
-  line-height: 200px;
-  text-align: center;
-  border: 2px solid black;
-  margin-top: 20px;
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
+    border: 2px solid black;
+    margin-top: 20px;
 }
+
 .bigkpitext {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  font-size: 2.6em;
-  font-weight: bold;
-  padding: 20px;
-
-
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+    font-size: 2.6em;
+    font-weight: bold;
+    padding: 20px;
 }
 
 .smallkpi {
-  height: 120px;
-  line-height: 120px;
-  text-align: center;
-  border: 2px solid black;
-
+    height: 120px;
+    line-height: 120px;
+    text-align: center;
+    border: 2px solid black;
+    margin-top: 10px;
+    margin-right: 5px;
 }
+
 .smallkpitext {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  font-size: 2em;
-  font-weight: bold;
-  padding: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+    font-size: 2em;
+    font-weight: bold;
+    padding: 20px;
 }
 
 .smallevo {
-  height: 80px;
-  line-height: 80px;
-  text-align: center;
-  border: 2px solid black;
+    height: 120px;
+    line-height: 120px;
+    text-align: center;
+    border: 2px solid black;
+    margin-top: 10px;
+    margin-left: 5px;
 }
+
 .smallevotext {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  font-size: 2em;
-  font-weight: bold;
-  padding: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+    font-size: 2em;
+    font-weight: bold;
+    padding: 20px;
 }
 
 .def-tab {
@@ -477,29 +476,33 @@ h3.kpievo {
     padding: 20px;
     font-family: 'Cabin', sans-serif;
 }
+
 .def-tab-labels-kpi {
-    padding: 10px;
-    width: 25%;
+    padding: 10px !important;
     font-size: 1.4em;
     text-transform: uppercase;
     font-weight: bold;
-    vertical-align: middle;
+    text-align: center !important;
+    vertical-align: middle !important;
 }
+
 .def-tab-labels {
-    padding: 10px;
-    width: 25%;
+    padding: 10px !important;
+    width: 40%;
     font-size: 1.2em;
     text-transform: uppercase;
     font-weight: bold;
-    vertical-align: middle;
+    vertical-align: middle !important;
 }
+
 .def-tab-kpi {
     padding: 10px;
     font-size: 1.4em;
     font-weight: bold;
-    vertical-align: middle;
+    vertical-align: middle !important;
 }
+
 .def-tab-text {
-    padding: 10px;
-    vertical-align: middle;
+    padding: 10px !important;
+    vertical-align: middle !important;
 }
