--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,1 @@
-<%= javascript_pack_tag 'hello_react', { greeting: "Hello" } %>
+<%= javascript_pack_tag 'hello_react', { greeting: "Hello toto" } %>
