--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,7 +115,7 @@ body {
     display: inline-block;
     color: #fefefe;
     background-color: #333;
-    padding: 10px 30px;
+    padding: 10px 20px;
     border-radius: 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -857,6 +857,7 @@ h3.kpievo {
     width: 100%;
     background: none;
     border: none;
+    position: relative;
 }
 
 .dropdown-menu>li>a {
@@ -868,4 +869,79 @@ h3.kpievo {
     color: #333;
     white-space: nowrap;
     font-size: 1em;
+}
+
+.caret {
+    display: none;
+}
+
+#left-tabs-example-tab-x, #left-tabs-example-tab-y {
+    padding-left: 30px;
+    width: 100%;
+    padding: 8px 20px;
+    text-align: left;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: 100;
+    white-space: normal;
+    display: inline-block;
+    color: #fefefe;
+    background-color: #333;
+    padding: 10px 20px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom-width: 3px;
+    margin-top: -3px;
+    text-shadow: 0 1px 0 #000;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    position: relative;
+}
+
+#left-tabs-example-tab-x:hover, #left-tabs-example-tab-y:hover {
+    background-color: #fcd1d1;
+    border-color: rgba(0,0,0,0.5);
+    text-shadow: 0 1px 0 #fff !important;
+    color: #000;
+}
+
+#left-tabs-example-tab-x:active, #left-tabs-example-tab-y:active {
+    background-color: #fcd1d1;
+    border-color: rgba(0,0,0,0.5);
+    text-shadow: 0 1px 0 #fff !important;
+    color: #000;
+}
+
+.barbutton2 {
+    width: 100%;
+    text-align: left;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: 100;
+    white-space: normal;
+    display: inline-block;
+    color: #000;
+    background-color: #f3f3f3;
+    padding: 6px 20px;
+    border-bottom: 2px;
+    margin-top: -3px;
+    text-shadow: none;
+    text-transform: none;
+    letter-spacing: -1px;
+    border-radius: 0;
+    border-color: #000;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+.barbutton2:hover {
+    background-color: #fcd1d1;
+    border-color: rgba(0,0,0,0.5);
+    text-shadow: 0 1px 0 #fff !important;
+}
+
+.barbutton2:active, .barbutton2:focus, .barbutton2:selected {
+    background-color: #f3f3f3;
+    border-color: rgba(0,0,0,0.5);
+    text-shadow: 0 1px 0 #fff !important;
 }
